# bbox

./: .env  Cargo.toml  Makefile  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
migrations/: 20241010112635_create_parties.sql  20241010112643_create_candidates.sql  20241010112653_create_candidatures.sql  20241010112701_create_voters.sql  20241010112703_create_votes.sql
public/: index.html
src/: lib.rs  main.rs
src/candidates/: mod.rs
src/candidatures/: mod.rs
src/party/: mod.rs
src/voters/: mod.rs
src/votes/: mod.rs
