[package]
name = "bbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "time", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7"] }
