[package]
name = "bbox"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-ws = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "time", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7"] }
validator = { version = "0.18.1", features = ["derive"] }
